tests/fixtures/errors/assertion_failure.lox
# Deliberate assertion failure — under --strict-assert this becomes
# InterpretError::AssertionFailed("deliberate") and the process exits non-zero.
assert(false, "deliberate");
